--- a/main/manager-web/.env.production
+++ b/main/manager-web/.env.production
@@ -1,4 +1,4 @@
-VUE_APP_API_BASE_URL=/xiaozhi
+VUE_APP_API_BASE_URL=http://118.178.108.32:5000
 VUE_APP_PUBLIC_PATH=/
 # 是否开启CDN
 VUE_APP_USE_CDN=false
